# rccb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: functional-spec.md  rewrite-roadmap.md
scripts/: build-deliverable.sh  smoke-clean.sh
src/: cli.rs  commands.rs  completion_hook.rs  constants.rs  daemon.rs  im.rs  io_utils.rs  layout.rs  main.rs  orchestrator_callback.rs  orchestrator_lock.rs  protocol.rs  provider.rs  types.rs  updater.rs
