[package]
name = "rccb"
version = "0.2.0-preview.1"
edition = "2021"
description = "Rust Claude Code Bridge with project-local binding and IM channels"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
sysinfo = "0.30"
flate2 = "1.0"
tar = "0.4"
